feat: add swagger autorization
