# docs/swagger.yaml
@@ -9,7 +9,7 @@ definitions:
       message:
         type: string
     type: object
-  controller.CreateUsersRequest:
+  controller.CreateEmployeesRequest:
     properties:
       age:
         type: integer
@@ -20,6 +20,29 @@ definitions:
       name:
         type: string
     type: object
+  controller.SignInRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  controller.SignUpRequest:
+    properties:
+      full_name:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  controller.TokenPairResponse:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
 info:
   contact:
     email: test@test.com
@@ -27,7 +50,7 @@ info:
     url: http://test.com
   title: MyProject API
 paths:
-  /users:
+  /api/employees:
     get:
       description: Получения списка всех пользователей
       produces:
@@ -43,10 +66,12 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.CommonError'
+      security:
+      - BearerAuth: []
       summary: Получение данных пользователя
       tags:
-      - User
-  /users/{id}:
+      - Employees
+  /api/employees/{id}:
     delete:
       description: Удаление данных пользователя по ID
       parameters:
@@ -72,7 +97,7 @@ paths:
             $ref: '#/definitions/controller.CommonError'
       summary: Удаление
       tags:
-      - User
+      - Employees
     get:
       description: Получения информации о пользователе по ID
       parameters:
@@ -81,6 +106,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: вставьте refresh token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -96,9 +126,11 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.CommonError'
+      security:
+      - BearerAuth: []
       summary: Получение данных пользователя по ID
       tags:
-      - User
+      - Employees
     put:
       description: Обновление данных пользователя по ID
       parameters:
@@ -107,7 +139,7 @@ paths:
         name: request_body
         required: true
         schema:
-          $ref: '#/definitions/controller.CreateUsersRequest'
+          $ref: '#/definitions/controller.CreateEmployeesRequest'
       produces:
       - application/json
       responses:
@@ -119,19 +151,112 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/controller.CommonError'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/controller.CommonError'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/controller.CommonError'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/controller.CommonError'
       summary: Обновление данных пользователя
       tags:
-      - User
+      - Employees
+  /auth/refresh:
+    get:
+      description: Обновить пару токенов
+      parameters:
+      - description: вставьте refresh token
+        in: header
+        name: Token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.TokenPairResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+      summary: Обновить пару токенов
+      tags:
+      - Auth
+  /auth/sign-in:
+    post:
+      description: Вход в аккаунт
+      parameters:
+      - description: Данные для входа пользователя
+        in: body
+        name: request_body
+        required: true
+        schema:
+          $ref: '#/definitions/controller.SignInRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.TokenPairResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+      summary: Вход
+      tags:
+      - Auth
+  /auth/sign-up:
+    post:
+      description: Создание нового аккаунта
+      parameters:
+      - description: Информация о новом аккаунте
+        in: body
+        name: request_body
+        required: true
+        schema:
+          $ref: '#/definitions/controller.SignUpRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/controller.CommonResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.CommonError'
+      summary: Регистрация
+      tags:
+      - Auth
+  /ping:
+    get:
+      description: Проверка сервиса
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.CommonResponse'
+      summary: Health-check
+      tags:
+      - Ping
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
