# internal/controller/middlewaire.go
@@ -2,49 +2,50 @@ package controller
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/prankevich/MyProject/internal/models"
 	"github.com/prankevich/MyProject/pkg"
 	"net/http"
-	"strings"
 )
 
 const (
 	authorizationHeader = "Authorization"
 	userIDCtx           = "userID"
+	userRoleCtx         = "userRole"
 )
 
 func (ctrl *Controller) checkUserAuthentication(c *gin.Context) {
-	header := c.GetHeader(authorizationHeader)
-
-	if header == "" {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
-			"error": "empty authorization header",
-		})
-		return
-	}
-
-	headerParts := strings.Split(header, " ")
-	if len(headerParts) != 2 {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
-			"error": "invalid authorization header",
-		})
-		return
-	}
-
-	if len(headerParts[1]) == 0 {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
-			"error": "empty token",
-		})
-		return
-	}
-
-	token := headerParts[1]
-	userID, err := pkg.ParseToken(token)
+	token, err := ctrl.extractTokenFromHeader(c, authorizationHeader)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
-			"error": err.Error(),
-		})
+		c.AbortWithStatusJSON(http.StatusUnauthorized, CommonError{Error: err.Error()})
+		return
+	}
+
+	userID, isRefresh, userRole, err := pkg.ParseToken(token)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, CommonError{Error: err.Error()})
+		return
+	}
+
+	if isRefresh {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, CommonError{Error: "inappropriate token"})
 		return
 	}
 
 	c.Set(userIDCtx, userID)
+	c.Set(userRoleCtx, string(userRole))
+}
+
+func (ctrl *Controller) checkIsAdmin(c *gin.Context) {
+	role := c.GetString(userRoleCtx)
+	if role == "" {
+		c.AbortWithStatusJSON(http.StatusUnauthorized, CommonError{Error: "role is not in context"})
+		return
+	}
+
+	if role != models.RoleAdmin {
+		c.AbortWithStatusJSON(http.StatusForbidden, CommonError{Error: "permission denied"})
+		return
+	}
+
+	c.Next()
 }
